add get the oldest item by type
